# aiida-dataframe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  publish-on-pypi.yml
aiida_dataframe/: __init__.py  cli.py
aiida_dataframe/data/: __init__.py  dataframe.py  dataframe_hdf5.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst  index.rst
tests/: __init__.py  test_cli.py  test_data.py
tests/test_cli/: test_dataframe_export.csv  test_dataframe_show.txt
